# SCA2_PofW

./: .env.example  .gitignore  LICENSE  SCA2_SyntheticDataGeneration_v3.ipynb  run.py
synthetic_generation/: .env.example  CLAUDE_CODE_INSTRUCTIONS.md  CLI_GUIDE.md  Prompt_Improvements_Diffs.md  README.md  SCA2_SyntheticDataGeneration_v3.ipynb  Sample_Triplets_600.md  TODO  pyproject.toml  requirements.txt  run.py
synthetic_generation/config/anchors/: altruism_anchors.jsonl  neg_reciprocity_anchors.jsonl  patience_anchors.jsonl  pos_reciprocity_anchors.jsonl  risk_aversion_anchors.jsonl  trust_anchors.jsonl
synthetic_generation/context/: audit_condensed.md
synthetic_generation/outputs/: D_syn_ARG_10.jsonl  D_syn_ARG_100.jsonl  D_syn_ARG_350.jsonl  D_syn_ARG_500.jsonl  D_syn_MEX_10.jsonl  D_syn_MEX_100.jsonl  D_syn_MEX_350.jsonl  D_syn_MEX_500.jsonl  checkpoint_raw_pairs.jsonl  checkpoint_scenario_bank.json  manifest_10.json  manifest_100.json  manifest_350.json  manifest_500.json
synthetic_generation/outputs/D_syn_combined_hf_10/: data-00000-of-00001.arrow  state.json
synthetic_generation/outputs/D_syn_combined_hf_100/: state.json  (+2 more)
synthetic_generation/sample_output/: D_syn_ARG.jsonl  D_syn_MEX.jsonl  D_syn_PAK.jsonl  D_syn_USA.jsonl  checkpoint_raw_pairs.jsonl  manifest.json
synthetic_generation/sca2_datagen/: __init__.py  anchors.py  config.py  export.py  generate.py  pilot_test.py  profiles.py  score.py  utils.py
synthetic_generation/tests/: conftest.py  test_config.py  test_generate.py  test_integration.py  test_profiles.py  test_score.py  test_utils.py
(+160 files in other folders)
